# examready-zen-

./: .gitignore  README.md
backend/: Makefile  pyproject.toml  requirements.txt
backend/app/: __init__.py  agent.py  answer_checker.py  answer_matcher.py  exam_importer.py  exam_registry.py  health_api.py  historical_exam_bank.py  ocr_extractor.py  pdf_preview.py  practice_plan.py  practice_selector.py  question_bank.py  question_extractor.py  readiness_checks.py  result_summary.py  revision_notes.py  safety.py  scoring.py  session.py  solution_extractor.py  topic_classifier.py  topic_map.py  zip_exam_package.py
backend/data/: demo_math_questions.json  math_topic_map_6aep.json
backend/data/historical_exams/: exam_registry.json  ifrane_2023_math.json  math_test_curation.json
backend/scripts/: import_historical_exams.py  reset_imported_exam_bank.py
backend/tests/: test_answer_matcher.py  test_answer_review_api.py  test_diagnostic_check_answer_api.py  test_diagnostic_session.py  test_exam_bank_api.py  test_exam_bank_upload_api.py  test_exam_importer.py  test_exam_question_review_api.py  test_exam_review_workflow.py  test_extraction_quality.py  test_health_api.py  test_historical_diagnostic_flow.py  test_historical_exam_bank.py  test_math_diagnostic.py  test_ocr_api.py  test_ocr_extractor.py  test_pdf_preview.py  test_question_extractor.py  test_result_summary.py  test_revision_notes.py  test_solution_extractor.py  test_topic_classifier.py  test_topic_map.py  test_zip_exam_package.py  test_zip_upload_package_import.py
docs/: PROJECT_LINK_NOTE.md  walkthrough.md  (+19 more)
(+43 files in other folders)
