[project]
name = "examready-zen-api"
version = "0.1.0"
description = "FastAPI backend for ExamReady Zen Math MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
